# rusic

./: .gitignore  Cargo.toml  LICENSE  cli.yml
examples/: control_song_thread.rs  database.rs
src/: app.rs  cli.rs  error.rs  lib.rs  utils.rs
src/app/: canvas.rs  model.rs
src/app/canvas/: board.rs  timeline.rs
src/app/model/: library.rs  player.rs  song.rs
src/app/model/player/: mode.rs  playback.rs
src/app/model/song/: format.rs  metadata.rs
