[package]
name = "rusic"
version = "1.1.0"
authors = ["Ares <coldswind@pm.me>"]
license = "ISC"
edition = "2018"
readme = "README.md"
keywords = ["music", "player", "shell"]
categories = ["command-line-utilities"]
repository = "https://github.com/TENX-S/rusic"
description = "A minimal music player in terminal"
exclude = ["screenshots/*", ".github"]

[dependencies]
id3 = "0.5"
#toml = "0.5"
anyhow = "1"
glob = "0.3"
rand = "0.8"
rodio = "0.13"
#futures = "0.3"
#config = "0.10"
thiserror = "1"
once_cell = "1"
dirs-next = "2"
metaflac = "0.2"
rusqlite = "0.24"
crossterm = "0.19"
parking_lot = "0.11"
log = { version = "0.4", features = ["std"] }
clap = { version = "2", features = ["yaml"] }
#tokio = { version = "1", features = ["full"] }
tui = { version = "0.14", features = ["crossterm"], default-features = false }

[build-dependencies]
anyhow = "1"
dirs-next = "2"
rusqlite = "0.24"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "rc"
path = "src/main.rs"
